--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </p>
                 <div class="mt-8 flex items-center justify-center gap-x-6">
                     <a href="mailto:purusoni05@gmail.com" class="rounded-md bg-teal-600 px-4 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-teal-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-teal-600">Contact Me</a>
-                    <a href="https://linkedin.com/in/puru-soni" target="_blank" class="text-sm font-semibold leading-6 text-slate-900">LinkedIn <span aria-hidden="true">→</span></a>
+                    <a href="https://www.linkedin.com/in/puru-soni-646188205/" target="_blank" class="text-sm font-semibold leading-6 text-slate-900">LinkedIn <span aria-hidden="true">→</span></a>
                 </div>
             </div>
         </section>
